src/objects/CMCAssociation__c.object
<CustomObject>
    <description>The junction that connects Client Member Code records to Program Overview records (CMC to Contract object) and Registration Code records (CMC to CMC)</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account to which the Client Member Code is associated</description>
        <inlineHelpText>The account to which the Client Member Code is associated</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CMC Associations</relationshipLabel>
        <relationshipName>CMC_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClientMemberCode__c</fullName>
        <description>The parent Client Member Code associated to either the Registration Code or the Program Overview</description>
        <label>Client Member Code</label>
        <referenceTo>ClientMemberCode__c</referenceTo>
        <relationshipLabel>CMC Associations</relationshipLabel>
        <relationshipName>CMC_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client_Member_Code_Client_Account__c</fullName>
        <formula>ClientMemberCode__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Member Code: Client Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>The code from the master Client Member Code record</description>
        <formula>ClientMemberCode__r.ClientMemberCode__c</formula>
        <inlineHelpText>The code from the master Client Member Code record</inlineHelpText>
        <label>Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramOverview__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Program Overview associated to the parent Client Member Code</description>
        <inlineHelpText>The Program Overview associated to the parent Client Member Code</inlineHelpText>
        <label>Program Overview</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can only associate CMC Associations with Program Overviews</errorMessage>
            <filterItems>
                <field>Contract.RecordType.Name</field>
                <operation>equals</operation>
                <value>Program Overview</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Program Overview Associations</relationshipLabel>
        <relationshipName>Program_Overview_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <formula>TEXT(ProgramOverview__r.Program_Name__c)</formula>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Overview_Name__c</fullName>
        <formula>ProgramOverview__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Overview Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegistrationCode__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Registration Code associated to the parent Client Member Code</description>
        <label>Registration Only Code</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can only associate Registration Code CMCs to the Population Code CMCs.</errorMessage>
            <filterItems>
                <field>ClientMemberCode__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Registration Only</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ClientMemberCode__c</referenceTo>
        <relationshipLabel>Registration Only Associations</relationshipLabel>
        <relationshipName>RegistrationOnly</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CMC Association</label>
    <nameField>
        <displayFormat>CMCA-{000000}</displayFormat>
        <label>CMC Association ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CMC Associations</pluralLabel>
    <recordTypes>
        <fullName>CMC_to_Program</fullName>
        <active>true</active>
        <label>CMC to Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>CMC_to_Registration</fullName>
        <active>true</active>
        <label>CMC to Registration</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>